--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "circos": "^2.1.0",
     "d3": "^5.16.0",
     "golden-layout": "^1.5.9",
+    "google-protobuf": "^3.13.0",
+    "grpc-web": "^1.2.1",
     "intersection-observer": "^0.11.0",
     "jquery": "^3.5.1",
     "mnemonist": "^0.38.0",
